--- a/算子学习团队培养计划.md
+++ b/算子学习团队培养计划.md
@@ -34,10 +34,10 @@
 | --- | --- | --- | --- | --- |
 | 1 | PINN复现 | 读论文了解PINN，写代码实现PINN | 1. 读论文[PINN](https://zxm2bh6u1o2.feishu.cn/file/I0SDbOyj0oZWhOxeJ4vcv77cnRe)<br>2. 学习求解已有的求解Burgers代码，写出求解[Helmholtz代码](https://zxm2bh6u1o2.feishu.cn/file/L3TVbHbgjoaHFKxLEyEcFm1hnnh) | 2025/10/11 |
 | 2 | DeepONet理论 | 学习DeepONet，了解**Operator Learning** | 1. 读论文[DeepONet](https://arxiv.org/abs/1910.03193)<br>2. 撰写`.md`回答以下问题：<br>• **相比PINN，算子的本质区别与优势**<br>• branch net和trunk net各自的作用<br>• **数据生成方式(GRF)**<br>• 你认为DeepONet求解PDE可提升之处 | 2025/10/18 |
-| 3 | DeepONet代码 | 用**GRF生成数据**，构建DeepONet解PDE | 1. 复现[DeepONet框架](https://github.com/lululxvi/deeponet/tree/master/seq2seq/learner/nn)<br>2. 学习[Diffusion-reaction算例](https://github.com/PredictiveIntelligenceLab/Physics-informed-DeepONets/blob/main/Diffusion-reaction/DeepONet_DR.ipynb)<br>3. 求解Burger算例 | 2025/10/25 |
+| 3 | DeepONet代码 | 用**GRF生成数据**，构建DeepONet解PDE | 1. 复现[DeepONet框架](https://github.com/lululxvi/deeponet/tree/master/seq2seq/learner/nn)<br>2. 学习[Diffusion-reaction算例](https://github.com/Enzo-888/Operator_Learning_teamonly/blob/main/DeepONet/DeepONet_DiffuReaction.ipynb)<br>3. 求解Burger算例 | 2025/10/25 |
 | 4 | PI-DeepONet复现 | 读论文学习PI-DeepONet，写代码复现PI-DeepONet | 1. 读论文[PI-DeepONet](https://www.science.org/doi/full/10.1126/sciadv.abi8605)<br>2. 撰写`.md`谈谈自己的理解：<br>• 何为'**parametric PDE**'<br>• **PI-DeepONet架构上改变了什么？解决了什么问题？**<br>3. 在自实现的DeepONet解Burger基础上修改为PI-DeepONet，跑出结果 | 2025/11/8 |
 | 5 | FNO理论 | 读论文，理解FNO，了解**超分辨率相关概念** | 1. 读论文[Fourier Neural Operator](https://arxiv.org/abs/2010.08895)<br>2. 撰写`.md`，系统回答以下问题：<br>• Conventional solvers，Finite-dimensional operators以及Neural-FEM的局限性，Neural Operators的优势<br>• 何为'Discretization'，何为'discretization-invariant'？<br>• 为什么不在空间域直接学习**核积分算子$(k(a;\phi)v_t)(x)$**？<br>• 举例解释为什么**频域上的操作有全局性**<br>• **FNO的组件**有哪些？每一个起什么作用？ | 2025/11/15 |
-| 6 | FNO代码 | 理解FNO代码逻辑，调用工具求解**NS方程** | 1. 理解FNO求解[Navier-Stokes方程代码](https://github.com/li-Pingan/fourier-neural-operator/blob/main/FNO-torch.1.6/fourier_2d_time.py)<br>2. 理解[神经算子库代码](https://github.com/neuraloperator/neuraloperator/blob/main/neuralop/models/fno.py)<br>3. 调用neuralop库求解Navier-Stokes方程 | 2025/11/22 |
+| 6 | FNO代码 | 理解FNO代码逻辑，调用工具求解**NS方程** | 1. 理解FNO求解[Navier-Stokes方程代码](https://github.com/Enzo-888/Operator_Learning_teamonly/blob/main/FNO/FNO_NS.ipynb)<br>2. 理解[神经算子库代码](https://github.com/neuraloperator/neuraloperator/blob/main/neuralop/models/fno.py)<br>3. 调用neuralop库求解Navier-Stokes方程 | 2025/11/22 |
 | 7 | 总结思考 | 系统化比较**DeepONet与FNO** | 1. 阅读论文[comparison of two neural operators](https://www.sciencedirect.com/science/article/abs/pii/S0045782522001207)<br>2. 撰写`.md`说明DeepONet和FNO两种算子的差异(motivation、architecture、feature)，相同点 | 2025/11/29 |
 
 ---
@@ -63,7 +63,7 @@
 ### 阶段3：DeepONet代码
 🔗 **代码资源**
 - [DeepONet框架实现](https://github.com/lululxvi/deeponet/tree/master/seq2seq/learner/nn)
-- [Diffusion-reaction算例](https://github.com/PredictiveIntelligenceLab/Physics-informed-DeepONets/blob/main/Diffusion-reaction/DeepONet_DR.ipynb)
+- [Diffusion-reaction算例](https://github.com/Enzo-888/Operator_Learning_teamonly/blob/main/DeepONet/DeepONet_DiffuReaction.ipynb)
 
 📖 **理论补充**
 - [GRF应用](https://zhuanlan.zhihu.com/p/643434159)
@@ -93,7 +93,7 @@
 
 ### 阶段6：FNO代码
 🔗 **代码资源**
-- [FNO求解Navier-Stokes方程](https://github.com/li-Pingan/fourier-neural-operator/blob/main/FNO-torch.1.6/fourier_2d_time.py)
+- [FNO求解Navier-Stokes方程](https://github.com/Enzo-888/Operator_Learning_teamonly/blob/main/FNO/FNO_NS.ipynb)
 - [神经算子库NeuralOp](https://github.com/neuraloperator/neuraloperator/blob/main/neuralop/models/fno.py)
 
 📖 **工具文档**
