the fourth commit(README)

--- a/算子学习团队培养计划.md
+++ b/算子学习团队培养计划.md
@@ -33,7 +33,7 @@
 | **阶段** | **学习内容** | **主要目标** | **实践/作业** | **截止日期** |
 | --- | --- | --- | --- | --- |
 | 1 | PINN复现 | 读论文了解PINN，写代码实现PINN | 1. 读论文[PINN](https://zxm2bh6u1o2.feishu.cn/file/I0SDbOyj0oZWhOxeJ4vcv77cnRe)<br>2. 学习求解已有的求解Burgers代码，写出求解[Helmholtz代码](https://zxm2bh6u1o2.feishu.cn/file/L3TVbHbgjoaHFKxLEyEcFm1hnnh) | 2025/9/28 |
-| 2 | DeepONet理论 | 学习DeepONet，了解**Operator Learning** | 1. 读论文[DeepONet](https://arxiv.org/abs/1910.03193)<br>2. 撰写`.md`回答以下问题：<br>• **相比PINN，算子的本质区别与优势**<br>• branch net和trunk net各自的作用<br>• **数据生成方式(GRF)**<br>• 你认为DeepONet求解PDE可提升之处 | 2025/10/5 |
+| 2 | DeepONet理论 | 学习DeepONet，了解**Operator Learning** | 1. 读论文[DeepONet](https://arxiv.org/abs/1910.03193)<br>2. 撰写`.md`回答以下问题：<br>• **相比PINN，算子的本质区别与优势**<br>• branch net和trunk net各自的作用<br>• **数据生成方式(GRF)**<br>• 你认为DeepONet求解PDE可提升之处<br>•**神经算子(NO)和神经网络(NN)的区别** | 2025/10/5 |
 | 3 | DeepONet代码 | 用**GRF生成数据**，构建DeepONet解PDE | 1. 复现[DeepONet框架](https://github.com/lululxvi/deeponet/tree/master/seq2seq/learner/nn)<br>2. 学习[Diffusion-reaction算例](https://github.com/Enzo-888/Operator_Learning_teamonly/blob/main/DeepONet/DeepONet_DiffuReaction.ipynb)<br>3. 求解Burger算例 | 2025/10/12 |
 | 4 | PI-DeepONet复现 | 读论文学习PI-DeepONet，写代码复现PI-DeepONet | 1. 读论文[PI-DeepONet](https://www.science.org/doi/full/10.1126/sciadv.abi8605)<br>2. 撰写`.md`谈谈自己的理解：<br>• 何为'**parametric PDE**'<br>• **PI-DeepONet架构上改变了什么？解决了什么问题？**<br>3. 在自实现的DeepONet解Burger基础上修改为PI-DeepONet，跑出结果 | 2025/10/19 |
 | 5 | FNO理论 | 读论文，理解FNO，了解**超分辨率相关概念** | 1. 读论文[Fourier Neural Operator](https://arxiv.org/abs/2010.08895)<br>2. 撰写`.md`，系统回答以下问题：<br>• Conventional solvers，Finite-dimensional operators以及Neural-FEM的局限性，Neural Operators的优势<br>• 何为'Discretization'，何为'discretization-invariant'？<br>• 为什么不在空间域直接学习**核积分算子$(k(a;\phi)v_t)(x)$**？<br>• 举例解释为什么**频域上的操作有全局性**<br>• **FNO的组件**有哪些？每一个起什么作用？ | 2025/10/26 |
@@ -114,7 +114,7 @@
 **A1:** 基本的深度学习知识和Python编程能力。建议先完成PINN基础任务熟悉PDE求解。
 
 **Q2:** 如何安排学习时间？
-**A2:** 建议每周投入15小时：10小时理论学习，5小时编程实践。每周日晚进行团队讨论。
+**A2:** 建议每周投入10小时：7小时理论学习，3小时编程实践。每周日晚进行团队讨论。
 
 **Q3:** 如何提交学习成果？
 **A3:** 
@@ -122,6 +122,7 @@
 - **代码实现**：Jupyter Notebook (.ipynb)
 - **命名规范**：`姓名-阶段-理论.md`、`姓名-阶段-代码.ipynb`
 - **提交方式**：每周截止日期前发送至 yichuang@sgd-ai.com
+- **特殊情况**：若当周无法完成作业，则需提交`incomplete_note.md`文件到邮箱，并在两个星期内补齐
 
 **如有问题，联系 yichuang@sgd-ai.com**
 ---
